src/test/deca/context/invalid/inst_return_in_void_method_bool.deca
// Test of the rule (3.24): not possible to return a boolean
// when we are not expecting a return

class A  {
    void getFloat(){
        return true;
    }
}

// Resultat:

//# TODO message error
